--- a/service-mfi-integration/config/application.properties
+++ b/service-mfi-integration/config/application.properties
@@ -14,18 +14,18 @@ server.compression.enabled=true
 logging.config=./config/logback-config.xml
 logging.path=./logs/
 
-database.name_or_sid=orac
+database.name_or_sid=tmp
 ###   Custom DATABASE configuration Oracle ####
-capitaworld.mfi.integration.db.driver=oracle.jdbc.driver.OracleDriver
-capitaworld.mfi.integration.db.url=jdbc:oracle:thin:@192.168.1.25:1521/orac
-capitaworld.mfi.integration.db.username=mfi1
-capitaworld.mfi.integration.db.password=mfi1
+#capitaworld.mfi.integration.db.driver=oracle.jdbc.driver.OracleDriver
+#capitaworld.mfi.integration.db.url=jdbc:oracle:thin:@192.168.1.25:1521/orac
+#capitaworld.mfi.integration.db.username=mfi1
+#capitaworld.mfi.integration.db.password=mfi1
 
 #### Custom DATABASE configuration mysql ####
-#capitaworld.sidbi.integration.db.driver=com.mysql.jdbc.Driver
-#capitaworld.sidbi.integration.db.url=jdbc:mysql://uat-encrypt-db.cmfy4dp1cezg.ap-south-1.rds.amazonaws.com:3306/${dataBaseName}?useSSL=false
-#capitaworld.sidbi.integration.db.username=dbsidbi
-#capitaworld.sidbi.integration.db.password=lambda123
+capitaworld.mfi.integration.db.driver=com.mysql.jdbc.Driver
+capitaworld.mfi.integration.db.url=jdbc:mysql://qa-db.cmfy4dp1cezg.ap-south-1.rds.amazonaws.com/tmp?useSSL=false
+capitaworld.mfi.integration.db.username=dbsidbi
+capitaworld.mfi.integration.db.password=qaaurora123
 
 #### Common Data Base Configuration ####
 capitaworld.mfi.integration.db.maxconnections=10
@@ -35,13 +35,13 @@ capitaworld.mfi.integration.db.maxlifetimeinmillis=30000
 capitaworld.mfi.integration.db.connectiontimeoutinmillis=60000
 capitaworld.mfi.integration.token.expire.time=5
 
-hibernate.dialect=oracle
+hibernate.dialect=mysql
 
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.format_sql=true
-hibernate.hbm2ddl.auto=crt
+hibernate.hbm2ddl.auto=update
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 hibernate.enable_lazy_load_no_trans=true
