--- a/service-mfi-integration/config/application.properties
+++ b/service-mfi-integration/config/application.properties
@@ -41,7 +41,7 @@ hibernate.dialect=mysql
 #spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.format_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=crt
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 hibernate.enable_lazy_load_no_trans=true
